Added DeleteUserById
